typescript/checker/tests/conformance/expressions/functionCalls/callWithSpreadES6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/callWithSpreadES6.ts:10:5
   |
10 | var a: string[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            168,
        ),
        hi: BytePos(
            169,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/callWithSpreadES6.ts:11:5
   |
11 | var z: number[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            186,
        ),
        hi: BytePos(
            189,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/callWithSpreadES6.ts:12:5
   |
12 | var obj: X;
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            199,
        ),
        hi: BytePos(
            201,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/callWithSpreadES6.ts:13:5
   |
13 | var xa: X[];
   |     ^^

